--- a/rebar.config
+++ b/rebar.config
@@ -4,6 +4,23 @@
   {grpc, {git, "https://github.com/emqx/grpc-erl", {tag, "0.6.6"}}}
 ]}.
 
+{plugins,
+ [{grpc_plugin, {git, "https://github.com/HJianBo/grpc_plugin", {tag, "v0.10.1"}}}
+ ]}.
+
+{grpc,
+ [ {type, all}
+   , {protos, ["protocol/"]}
+   , {out_dir, "src/"}
+   , {gpb_opts, [{type_specs, false}, {module_name, "hstreamdb_api"}]}
+
+ ]}.
+
 {shell, [
     {apps, [hstreamdb_erl]}
 ]}.
+
+{provider_hooks,
+ [{pre, [{compile, {grpc, gen}},
+         {clean, {grpc, clean}}]}
+ ]}.
