refactor: format test modules

--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,7 @@
         "src/hstream_server_h_stream_api_bhvr.erl",
         "src/hstream_server_h_stream_api_client.erl"
     ]},
-    {files, ["src/*.erl", "include/*.hrl", "rebar.config", "examples/*.erl"]}
+    {files, ["src/*.erl", "test/*.erl", "include/*.hrl", "rebar.config", "examples/*.erl"]}
 ]}.
 
 {grpc, [
