--- a/.ci/docker-compose-file/docker-compose-hstreamdb.yaml
+++ b/.ci/docker-compose-file/docker-compose-hstreamdb.yaml
@@ -2,7 +2,7 @@ version: "3.5"
 
 services:
   hserver0:
-    image: hstreamdb/hstream:v0.16.0
+    image: hstreamdb/hstream:latest
     depends_on:
       zookeeper:
         condition: service_started
@@ -38,7 +38,7 @@ services:
         --io-tasks-network hstream-network
 
   hserver1:
-    image: hstreamdb/hstream:v0.16.0
+    image: hstreamdb/hstream:latest
     depends_on:
       zookeeper:
         condition: service_started
@@ -74,7 +74,7 @@ services:
         --io-tasks-network hstream-network
 
   hserver-init:
-    image: hstreamdb/hstream:v0.16.0
+    image: hstreamdb/hstream:latest
     depends_on:
       - hserver0
       - hserver1
@@ -98,7 +98,7 @@ services:
         /usr/local/bin/hadmin server --host hserver0 init
 
   hstore:
-    image: hstreamdb/hstream:v0.16.0
+    image: hstreamdb/hstream:latest
     networks:
       hstream-network:
         ipv4_address: 10.5.0.6
