chore: use upstream grpc

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
     {ecpool, {git, "https://github.com/emqx/ecpool.git", {tag, "0.5.3"}}},
-    {grpc,
-        {git, "https://github.com/savonarola/grpc-erl", {branch, "0730-fix-server-stream-close"}}},
+    {grpc, {git, "https://github.com/emqx/grpc-erl", {tag, "0.6.9"}}},
     {ezstd, {git, "https://github.com/emqx/ezstd.git", {tag, "v1.0.4-emqx1"}}}
 ]}.
 
